<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Pr0methean Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/Pr0methean/BetterRandomJdk17</url>
        </repository>
    </distributionManagement>

    <groupId>io.github.pr0methean.newbetterrandom</groupId>
    <artifactId>BetterRandomJdk17</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M7</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.2.0</version>
            </plugin>
        </plugins>
    </build>
    <modules>
        <module>core</module>
        <module>httpclient</module>
    </modules>

    <properties>
        <java.version>19</java.version>
        <jackson.version>2.13.3</jackson.version>
        <junit.version>5.8.2</junit.version>
        <maven.compiler.enablePreview>true</maven.compiler.enablePreview>
        <maven.test.compiler.enablePreview>true</maven.test.compiler.enablePreview>
        <argLine>--enable-preview</argLine>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <surefire.timeout>3600</surefire.timeout>
    </properties>


</project>